fixed projects page overflow and scroll bar, made footer absolute

--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,19 @@ body::before {
   position: fixed;
   top: 0;
 }
+
+*::-webkit-scrollbar {
+  width: 12px;               /* width of the entire scrollbar */
+}
+*::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.5);
+}
+*::-webkit-scrollbar-thumb {
+  background-color: rgb(77, 243, 255, 0.3);    /* color of the scroll thumb */
+  border-radius: 20px;       /* roundness of the scroll thumb */
+  /* border: 3px solid creates padding around scroll thumb */
+}
+
+#root {
+  min-height: 100vh;
+}
