--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -12,7 +12,6 @@
 }
 
 .home-container {
-    margin-right: 5%;
     padding: 2%;
     overflow: auto;
 }
